# community

./: .gitignore  CHANGEPLAN.md  CODEOWNERS  CONTRIBUTING.md  GOVERNANCE.MD  NOTICE  ORGS.md  PRINCIPLES.MD  PRINCIPLES.md  README.md  ROLES.md  TOC.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: paketo-buildpacks-sc-candidate-nomination.md  paketo-buildpacks-tsc-candidate-nomination.md  request-to-be-elector-for-paketo-buildpacks-sc-election.md  request-to-be-elector-for-paketo-buildpacks-tsc-election.md  request-to-be-elector-for-toc-election.md  rfc-issue-template.md  toc-candidate-nomination.md
.github/workflows/: branch-protection.yml  main.yml  org-inactive-user-management.yml  org-management-check-prs.yml  org-management-ci.yml  org-management-peribolos-dump.yml  org-management.yml  project-sync.yml  remove-individual-access.yml
ci/docker/ghproxy/: Dockerfile  entrypoint.sh
elections/2021/TOC/: electiondescription.html  results.md
elections/2022/TOC/: README.md  ballots.csv  candidate-AP-Hunt.md  candidate-beyhan.md  candidate-pburkholder.md  candidate-rkoster.md  election.yaml  election_desc.md  results.md  voters.yaml
elections/2023/: election_desc.md
governing-board/: charter-with-toc.md  charter.md
org/: branchprotection.yml  cloudfoundry.yml  contributors.yml  org_management.py  org_user_management.py  orphaned_repos.sh  readme.md  requirements.txt  test_org_management.py
orgs/: branchprotection.yml  contributors.yml  generate_working_group_projects_sync_config.sh  org_management.py  org_user_management.py  orgs.yml  orphaned_repos.sh  pyproject.toml  readme.md  requirements-dev.txt  test_org_management.py
orgs/org_management/: __main__.py  org_management.py  org_user_management.py  test_org_management.py
scripts/: extract_wg_activity.py  generate_working_group_update.py
toc/: ADMIN.md  Admin.md  CHANGEPLAN.md  GOVERNANCE.md  PRINCIPLES.md  ROLES.md  TOC.md
toc/2022/: Readme.md
toc/rfc/: README.md  assign-rfc-number.sh  rfc-000-template.md  rfc-0001-jammy-os.md  rfc-0002-github-members.md  rfc-0003-pr-only-workflow.md  rfc-0004-wg-visibility.md  rfc-0005-github-teams-and-access.md  rfc-0006-approver-requirements.md  rfc-0007-repository-ownership.md  rfc-0008-role-change-process.md  rfc-0009-efficient-modern-vm-sizes.md  rfc-0010-stemcell-cleanup.md  rfc-0011-move-buildpacks-dependencies-to-cff.md  rfc-0012-formal-aspiring-approvers-as-reviewers.md  rfc-0013-remove-nonstandard-github-teams.md  rfc-0014-github-teams-and-access.md  rfc-0015-branch-protection.md  rfc-0016-python-and-ruby-removal-from-cf-stack.md  rfc-0017-add-cnbs.md  rfc-0018-aggregate-metric-egress-with-opentelemetry-collector.md  rfc-0019-pcap-bosh.md  rfc-0020-readiness-healthchecks.md  rfc-0021-deprecate-metrics-agent.md  rfc-0021-toc-stand-in-for-wg-lead.md  rfc-0022-deprecate-metrics-agent.md  rfc-0023-add-cf-supports-for-fips-stemcell.md  rfc-0024-promoting-or-revoking-wg-leads.md  rfc-0025-define-criteria-and-removal-process-for-inactive-members.md  rfc-0026-noble-os.md  rfc-0027-generic-per-route-features.md  rfc-0028-cnb-lifecycle.md  rfc-0029-ssh-over-ws.md  rfc-0030-add-support-for-file-based-service-binding.md  rfc-0031-system-cnb.md  rfc-0032-cfapiv2-eol.md  rfc-0033-user-creation-by-org-managers.md  rfc-0034-v2-app-manifests.md  rfc-0035-add-bosh-release-property-validation.md  rfc-0036-multiple-github-orgs.md  (+103 more)
toc/working-agreements/: 2021-11-9-common-stale-bot.md  2021-11-9-moving-to-a-PR-only-workflow.md
toc/working-groups/: 001-move-to-PR-only-system.md  002-PRs-Require-2-Reviewers.md  WORKING-GROUPS.md  agentic-runtime.md  app-runtime-deployments.md  app-runtime-interfaces.md  app-runtime-platform.md  buildpacks.md  cf-on-k8s.md  community-experience.md  concourse.md  contributions-for-user.sh  docs.md  foundational-infrastructure.md  paketo.md  parsable-working-groups.sh  service-management.md  vulnerability-management.md
working-groups/: WORKING-GROUPS.md
(+98 files in other folders)
